--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <p id="win">Wins: </p>
         <p id="lose">Losses: </p>
         <p id="draw">Draws: </p>
+        
+        <p id="result"></p>
+
         <script src="script.js"></script>
     </body>
 </html>
